# napari-nninteractive

./: pyproject.toml
src/napari_nninteractive/: resolution_selector.py  widget_controls.py  widget_gui.py  widget_main.py
src/napari_nninteractive/layers/: scribble_layer.py
