[project]
name = "napari-nninteractive"
version = "2.5.2"
description = "nnInteractive plugin for Napari"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Lars Krämer"}, {email = "lars.kraemer@dkfz-heidelberg.de"},
  { name = "Fabian Isensee"}, {email = "f.isensee@dkfz-heidelberg.de"},
  { name = "Maximilian Rokuss"}, {email = "maximilian.rokuss@dkfz-heidelberg.de"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    # The default install is the lightweight, torch-free REMOTE client: it can drive
    # a remote nninteractive-server out of the box and pulls no PyTorch. For local
    # inference install the [local] extra (see below / the README), which adds the
    # full nnInteractive backend (torch + nnU-Net). pip extras can only ADD
    # dependencies, never subtract, so local is the opt-in extra rather than
    # something a remote-only user has to strip out of a torch-heavy base.
    "numpy",
    "qtpy",
    "napari-nifti",
    "napari_toolkit",
    # Torch-free remote client + shared wire protocol (pulls numpy/httpx/blosc2).
    # Provides nnInteractive.inference.remote; the full nnInteractive package (added
    # by [local]) depends on this same client, so the two coexist cleanly.
    "nninteractive-client>=2.5.0",
]

[project.optional-dependencies]
# Local (in-process) inference. Adds the full nnInteractive backend, which pulls
# PyTorch + nnU-Net and provides model discovery/download. On a GPU machine install
# the matching CUDA build of torch first (see the README), then:
#   pip install "napari-nninteractive[local]"
local = [
    "nnInteractive>=2.5.0",
]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
napari-nninteractive = "napari_nninteractive:napari.yaml"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.urls]
Homepage = "https://github.com/MIC-DKFZ/napari-nninteractive"
Code = "https://github.com/MIC-DKFZ/napari-nninteractive"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 100
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
